--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 export FACEBOOK_KEY=1593943109874542
 export FACEBOOK_SECRET=13d91b6caoejb82389241cf56e6d8db7
+export AWS_BUCKET=yourbucket
+export AWS_ACCESS_KEY_ID=WOARJHEYTONDR3R5TB5Q
+export AWS_SECRET_ACCESS_KEY=39e30ikXx6wCgiuJgi12olah1BQNljt6qgqXYC4
